# ProtoSynth

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  RELEASE.md  RESULTS.md  Readme.md  demo.py  demo_phase2.py  pyproject.toml  roadmap.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml
bundles/v0.1.0/: markov_k2_demo.json  periodic_k4_demo.json  test_markov.json
complete_demo_logs/: protosynth_complete_demo_metrics.csv  protosynth_complete_demo_metrics.json
complete_demo_repro/: best_program.pkl  config.json  metadata.json  modules.pkl  replay.py
debug/: debug_interpreter_loop.py  debug_markov_table_function.py  debug_mle_fitting.py  debug_parameter_passing.py  debug_train_val_split.py
demo/: demo_complete_system.py  demo_final.py  evolve.py
docs/: master_doc.md
experiments/: adversarial_env.py  baseline_comparison.py  final_experiments_results.json  final_science_validation.py  focused_science.py  module_validation.py  quick_validation.py  run_final_experiments.py  scaling_laws.py  science_mode.py  transfer_learning.py
protosynth/: __init__.py  agent.py  cli.py  config.py  core.py  curriculum.py  curriculum_evolution.py  diff_shrink.py  envs.py  eval.py  evolve.py  metrics.py  modularity.py  mutation.py  ngram.py  predictor.py  repro.py  utils.py  verify.py
tests/: __init__.py  benchmark_learning.py  compute_theoretical_max.py  diagnose_markov_evaluation.py  litmus_test.py  markov_benchmark_test.py  performance_analysis.py  quick_benchmark_test.py  regression_tests.py  sprint_validation.py  staged_parity_harness.py  test_adaptive_k_ctx.py  test_complete_surgical_fixes.py  test_comprehensive_fixes.py  test_context_detection.py  test_context_fixes.py  test_context_heavy_init.py  test_core.py  test_curriculum.py  test_edge_cases.py  test_enhanced_modularity.py  test_envs.py  test_eval.py  test_evolve.py  test_fixes.py  test_hard_niche_system.py  test_improvements.py  test_integration.py  test_markov_evolution_fixes.py  test_markov_fixes.py  test_micro_patches.py  test_mle_fix.py  test_modularity.py  test_mutation.py  test_ngram.py  test_predictor.py  test_quick_wins.py  test_robust_selection.py  test_state_reset.py  test_surgical_fixes.py  (+4 more)
