[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protosynth"
version = "0.1.0"
description = "Self-modifying AI with emergent modularity"
authors = [{name = "ProtoSynth Team"}]
license = "MIT"
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["ai", "self-modifying", "evolution", "lisp", "prediction"]
requires-python = ">=3.8"
dependencies = ["numpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Aladin147/ProtoSynth"
Repository = "https://github.com/Aladin147/ProtoSynth"
Issues = "https://github.com/Aladin147/ProtoSynth/issues"

[project.scripts]
protosynth-evolve = "protosynth.cli:evolve_main"
protosynth-replay = "protosynth.cli:replay_main"

[project.optional-dependencies]
dev = ["pytest>=6.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["protosynth*"]
exclude = ["tests*", "experiments*"]
